# agentic_flows

./: .gitignore
crewai/agents/: llm.html  own.html  pyproject.toml  repo.html
crewai/agents/src/agents/: llm.py  own.py  repo.py
crewai/evaluator/: own.html  pyproject.toml  repo.html
crewai/evaluator/src/evaluator/: evaluator.py  llm.py  own.py  repo.py
crewai/orchestrator/: own.html  pyproject.toml  sentiment_analysis.txt
crewai/orchestrator/src/orchestrator/: llm.py  own.py  repo.py
crewai/parallel/: llm.html  own.html  pyproject.toml
crewai/parallel/src/parallel/: llm.py  own.py  repo_one.py  repo_two.py
crewai/prompt_chaining/: llm.html  pyproject.toml
crewai/prompt_chaining/src/prompt_chaining/: llm.py  own.py  repo.py
crewai/routing/: llm.html  own.html  pyproject.toml
crewai/routing/src/routing/: __init__.py  llm.py  own.py  repo.py
langgraph/evaluator/: pyproject.toml  workflow.html
langgraph/evaluator/src/evaluator/: llm.py  own.py
langgraph/orchestrator/: pyproject.toml
langgraph/orchestrator/src/orchestrator/: __init__.py
langgraph/parallelization/: pyproject.toml
langgraph/parallelization/src/parallelization/: llm.py  own.py
langgraph/prompt-chaining/: .env  pyproject.toml
langgraph/prompt-chaining/src/prompt_chaining/: llm.py  own.py
langgraph/routing/: pyproject.toml
langgraph/routing/src/routing/: llm.py  own.py
