[project]
name = "evaluator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Fasih", email = "programmer.fasih.18@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.102.0",
    "litellm>=1.60.2",
    "pydantic>=2.10.6",
]

[project.scripts]
evaluator = "evaluator:main"
abc = "evaluator.evaluator:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
