[project]
name = "parallel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Fasih", email = "programmer.fasih.18@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.102.0",
    "litellm>=1.60.2",
]

[project.scripts]
repo_one = "parallel.repo_one:main"
repo_two = "parallel.repo_two:main"
own = "parallel.own:main"
llm = "parallel.llm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
