[project]
name = "routing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Fasih", email = "programmer.fasih.18@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.102.0",
    "litellm>=1.60.2",
]

[project.scripts]
routing = "routing:main"
llm = "routing.llm:main"
own = "routing.own:main"
repo = "routing.repo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
