[project]
name = "orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Fasih", email = "programmer.fasih.18@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.74",
]

[project.scripts]
orchestrator = "orchestrator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
